tests/instantiating/clear_invalid_value/stderr.golden
error: clear property must be "Explicit" or "On Read", current value "Lorem"
bus.fbd +3:11
   |
 3 | 		clear = "Lorem"
   | 		        ^^^^^^^
